--- a/index.html
+++ b/index.html
@@ -5,19 +5,6 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQL Formatter</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              'sans': ['Inter', 'sans-serif'],
-              'mono': ['Courier New', 'monospace'],
-            },
-          },
-        },
-      }
-    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto+Mono&family=Source+Code+Pro&display=swap" rel="stylesheet" crossorigin="anonymous">
@@ -36,6 +23,6 @@
 </head>
   <body class="bg-gray-900 font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
